<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_type" />

        <Spinner
            android:id="@+id/SType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/LLShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_shape" />

            <Spinner
                android:id="@+id/SShape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_scale"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/SBScale"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:max="250" />

            <TextView
                android:id="@+id/TVScaleValue"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="100%" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_opacity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/SBOpacity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:max="100" />

            <TextView
                android:id="@+id/TVOpacityValue"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="100%" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLRangeOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_range" />

            <Spinner
                android:id="@+id/SRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_orientation" />

            <RadioGroup
                android:id="@+id/RGOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorie_input_controls_horizontal" />

                <RadioButton
                    android:id="@+id/RBVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorie_input_controls_vertical" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_columns" />

            <NumberPicker
                android:id="@+id/NPColumns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLMIDIKeyOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_note" />

            <Spinner
                android:id="@+id/SNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLRadialMenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_bindings" />

            <NumberPicker
                android:id="@+id/NPBindings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLBindings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <CheckBox
            android:id="@+id/CBToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_toggle_switch" />

        <CheckBox
            android:id="@+id/CBMouseMoveMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_move_mouse_when_pressed" />

        <LinearLayout
            android:id="@+id/LLCustomTextIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_custom_text" />

            <EditText
                android:id="@+id/ETCustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="8"
                android:hint="@string/lorie_input_controls_none"
                android:inputType="textCapCharacters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorie_input_controls_icon" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:id="@+id/LLIconList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
