<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/SProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/BTAddProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_add"
                android:contentDescription="@string/lorie_input_controls_new_profile" />

            <ImageButton
                android:id="@+id/BTEditProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/lorie_input_controls_edit_profile" />

            <ImageButton
                android:id="@+id/BTDuplicateProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_save"
                android:contentDescription="@string/lorie_input_controls_duplicate_profile" />

            <ImageButton
                android:id="@+id/BTRemoveProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/lorie_input_controls_remove_profile" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_cursor_speed"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/SBCursorSpeed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:max="240" />

            <TextView
                android:id="@+id/TVCursorSpeedValue"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="100%" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_overlay_opacity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/SBOverlayOpacity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:max="90" />

            <TextView
                android:id="@+id/TVOverlayOpacityValue"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="40%" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/CBDisableMouseInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorie_input_controls_disable_mouse_input"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#40ffffff"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BTImportProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lorie_input_controls_import_profile" />

            <Button
                android:id="@+id/BTExportProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lorie_input_controls_export_profile" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#40ffffff" />

        <Button
            android:id="@+id/BTControlsEditor"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lorie_input_controls" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/lorie_input_controls_external_controllers"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#40ffffff" />

        <LinearLayout
            android:id="@+id/LLExternalControllers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/TVEmptyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/lorie_input_controls_no_items_to_display"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
